tests/snapshots/examples_fixtures/aoc__2024__day03_test.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2024/day03_test.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify Option<Int> with Int.

  --> examples/aoc/2024/Day03Solver.flx:59:27
   |
59 |                     Some((Mul(parse_int(left_text), parse_int(right_text)), after_right + 1))
   |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                           ------------------------------------------------ expected Option<Int>, found Int
== stdout ==
<not executed>
